# ime.rust

./: .gitignore  CLAUDE.md  CROSS_COMPILE.md  Cargo.toml  IME_INTEGRATION.md  README.md  build.rs  phrases_expanded.txt
.cargo/: config.toml
src/: app.rs  main.rs
src/ime/: association.rs  dict.rs  dict_core.rs  double_pinyin.rs  engine.rs  layout.rs  mod.rs  pinyin.rs  syllable_table.rs  user_dict.rs
src/ime/dicts/: phrases.txt  phrases_expanded.txt  phrases_geo.txt  pinyin_chars.txt
src/ime/doc/: TECHNICAL.md
src/ime/ui/: KEYBOARD_PANEL.md  keyboard.slint
ui/: main.slint
