[package]
name = "ime-widget-test"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.9", default-features = false, features = ["std", "compat-1-2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
slint-build = "1.9"

[features]
default = ["desktop"]
desktop = ["slint/backend-winit", "slint/renderer-femtovg"]
embedded = ["slint/backend-linuxkms-noseat", "slint/renderer-software"]
